# thirdparty

./: .gitignore  CMakeLists.txt
NaviDemo/: CMakeLists.txt  ReadMe
NaviDemo/api/: CMakeLists.txt
NaviDemo/api/appmgr/: CMakeLists.txt
NaviDemo/api/audio/: CMakeLists.txt
NaviDemo/api/display/: CMakeLists.txt
NaviDemo/api/positioning/: CMakeLists.txt
NaviDemo/api/power/: CMakeLists.txt
NaviDemo/api/prompt/: CMakeLists.txt
NaviDemo/api/source/: CMakeLists.txt
NaviDemo/app/: CMakeLists.txt
NaviDemo/app/src/: PositionMgr.cpp  PositionMgr.h  SVPNaviApp.cpp  SVPNaviView.cpp  SVPNaviView.h  SVPPcmPaSimple.cpp  SVPPcmPlayer.h
Record/: CPCMRecorder.cpp  CPCMRecorder.h
SSPLinkDemo/: ReadMe.txt  ReadMe2.txt  ReleaseNote.txt
SSPLinkDemo/hmi/: hmi.pro
SSPLinkDemo/hmi/SSPLinkHMI/: SSPLinkHMI.pri  SSPLinkHMI.pro
SSPLinkDemo/hmi/SSPLinkHMI/qml/: SSPLinkQml.qrc
SSPLinkDemo/hmi/SSPLinkHMI/qml/SSPLink/: Launcher.qml  qmldir
SSPLinkDemo/hmi/SSPLinkHMI/res/: SSPLinkRes.qrc
SSPLinkDemo/hmi/SSPLinkHMI/src/: launcherservice.cpp  launcherservice.h
SSPLinkDemo/hmi/Test/: Test.pro  main.cpp
SSPLinkDemo/ssplink/: CMakeLists.txt  manifest.xml  pkg.sh
SSPLinkDemo/ssplink/src/: SVPNaviApp.cpp  SVPNaviQML.h  SVPNaviView.cpp  SVPNaviView.h
vdec/: CMakeLists.txt
vdec/include/: CI_SDK_MetaInfo.h  CiStreamingPlayerSDK.h  General_StreamInput.h  IVDEC.h  IVDEC_Defs.h  ScreenSaverPlayer.h  ci_aacdec.h  ci_aacenc.h  ci_codec_type.h  ci_dvr.h  ci_g5r2vdec.h  ci_g5r2venc.h  ci_opusdec.h  ci_opusenc.h
vdec/src/: General_StreamInput.cpp  ScreenSaverPlayer.cpp  ScreenSaverPlayer.h  main.cpp
vdec/svpinclude/: SVPLimits.h  SVPPlatform.h  SVPType.h
